# mini-infer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION_REPORT_FINAL.md  CONFIG_REVIEW.md  CONTRIBUTING.md  PROJECT_SETUP_SUMMARY.md  QUICK_FIX.md  QUICK_START_GUIDE.md  README.md  README_zh.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  tests.yml
benchmarks/: README.md  benchmark_latency.py  benchmark_throughput.py  plot_results.py
docs/: api_reference.md  architecture.md  faq.md  installation.md
examples/: README.md  quickstart.py
mini_infer/: __init__.py
mini_infer/engine/: __init__.py
mini_infer/kernels/: __init__.py
mini_infer/memory/: __init__.py
mini_infer/utils/: __init__.py
scripts/: README.md  run_benchmarks.bat  setup_env.bat
tests/: test_attention.py  test_block_manager.py  test_scheduler.py  test_utils.py
